tests/baselines/reference/compareAndSetOperatorMisuse03.errors.txt
tests/cases/compiler/compareAndSetOperatorMisuse03.ts(16,38): error TS555370004: The '__compareAndSet' operator cannot be tailed by anything other than a (two-value) argument-list. (kind=22 ; ).


==== tests/cases/compiler/compareAndSetOperatorMisuse03.ts (1 errors) ====
    const example = (
        new (class Incr {
    
            value !: number ;
            constructor() {
                this.value = 0 ;
            }
            
        } )()
    ) ;
    {
        /**  
         * shall raise syntax error exactly "__compareAndSet cannot be tailed by anything other than [...]"
         */
        {
            example.value __compareAndSet[9 ] ;
                                         ~
!!! error TS555370004: The '__compareAndSet' operator cannot be tailed by anything other than a (two-value) argument-list. (kind=22 ; ).
        }
    }
    
    
    
    
    
    